--- a/proj2/index.html
+++ b/proj2/index.html
@@ -352,7 +352,7 @@
 						<figcaption>Torus With Preprocessing on One Corner</figcaption>	
 					</div>
 					<div id="centerImage">
-						<img src="images/Task6_Torus4.png" class="centerImage" width="400px" style="margin: 5px 5px 5px 5px;">
+						<img src="images/Task6_torus4.png" class="centerImage" width="400px" style="margin: 5px 5px 5px 5px;">
 						<figcaption>Preprocessed Torus After 3 Iterations of Loop Subdivision</figcaption>	
 					</div>
 					<p></p>
